src/test/ui/parser/removed-syntax-mode.stderr
error: expected pattern, found `+`
  --> $DIR/removed-syntax-mode.rs:13:6
   |
LL | fn f(+x: isize) {} //~ ERROR expected pattern, found `+`
   |      ^ expected pattern

error: aborting due to previous error

